<resources>
    <string name="app_name">Best Android App</string>
    <string name="home_page">Home Page</string>
    <string name="settings">Settings</string>
    <string name="night_mode_on">Night mode is on</string>
    <string name="night_mode_off">Night mode is off</string>
    <string name="night_mode_title">Night mode</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="settings_icon">settings icon</string>
    <string name="appearance">Appearance</string>
    <string name="help">Help</string>
    <string name="switch_day_night_mode_key">switch_day_night_mode_key</string>
    <string name="permissions_error">You can\'t use camera without permission</string>
    <string name="error">Error</string>
    <string name="configure_failed">Configure Failed</string>
    <string name="back_to_menu">back to menu</string>
    <string name="uninitialized_classifier">Uninitialized Classifier or invalid context.</string>
    <string name="restaurant_photo_description">restaurant photo</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="can_live_at_home">can live at home </string>
    <string name="affectionate">affectionate </string>
    <string name="is_affectionate_icon_description">is affectionate icon description</string>
    <string name="is_can_live_at_home_icon_description">is can live at home icon description</string>
    <string name="type_popularity">type popularity</string>
    <string name="dash">-</string>
    <string name="weight_kg">weight (pounds):</string>
    <string name="height_kg">height (inches):</string>
    <string name="is_likes">is likes</string>
    <string name="life_expectancy">life expectancy: </string>
    <string name="cost_dollars">cost ($):</string>
    <string name="no_description">No description</string>
    <string name="close_button">close button</string>
    <string name="map_restaurants">map restaurants</string>
    <string name="add_map_restaurant">Add map restaurant</string>
    <string name="add_restaurant_photo">Add restaurant photo</string>
    <string name="photo_processing_error">photo processing error</string>
    <string name="unable_location">unable to get current location</string>
    <string name="select_a_restaurant">Select a restaurant:</string>
    <string name="add_type_description">add type description</string>
    <string name="ok">OK</string>
    <string name="enter_phone_number">Enter phone number:</string>
    <string name="phone_number">Phone number</string>
    <string name="all_fields_must_be_filled">all fields must be filled</string>
    <string name="image_upload_error">Error while posting image</string>
    <string name="your_announcement_has_been_moderated">your announcement has been moderated</string>
    <string name="announcement_posting_error">error while posting your announcement</string>
    <string name="custom_marker">custom marker</string>
    <string name="important">important</string>
    <string name="map_restaurants_near">There are map restaurants near you</string>
</resources>
