<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    tools:parentTag="android.widget.GridLayout">

    <TextView
        android:id="@+id/breedDescriptionCanLiveAtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/can_live_at_home"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/breedDescriptionCanLiveAtHomeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:contentDescription="@string/is_can_live_at_home_icon_description"
        android:tint="?attr/colorAccent"
        app:srcCompat="@drawable/ic_check" />

    <TextView
        android:id="@+id/breedDescriptionAffectionate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/affectionate"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/breedDescriptionAffectionateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:contentDescription="@string/is_can_live_at_home_icon_description"
        android:tint="?attr/colorAccent"
        app:srcCompat="@drawable/ic_check" />

    <TextView
        android:id="@+id/breedDescriptionHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/height_kg"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/breedDescriptionHeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/dash"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/breedDescriptionWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/weight_kg"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/breedDescriptionWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/dash"
        android:textSize="18sp" />

</merge>